--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,22 +2,28 @@
   --font: Arial, sans-serif;
   --font-size: 2vw;
   --button-color: #7bb4ad;
+  --background-color: linear-gradient(to right, #ffcccc, #cc99ff);
+  --text-color: #000000;
+  --rectangle-color: white;
 }
 
+:root.dark {
+  --background-color: linear-gradient(to right, #49025f, #4e019b);
+  --rectangle-color: rgb(46, 42, 42);
+  --text-color: white;
+  --button-color: #4f2085;
+}
+
+
 body {
-    background: linear-gradient(to right, #ffcccc, #cc99ff);
-    margin: 0 auto;
-    padding: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background: var(--background-color);
+    box-sizing: border-box;
   }
-  
+
   .rectangle {
     width: 50vw;
     height: 40vw;
-    background-color: white;
+    background-color: var(--rectangle-color);
     border-radius: 20px;
     position: absolute;
     top: 50%;
@@ -27,6 +33,9 @@ body {
   }
 
   .text-container {
+    color: var(--text-color);
+    font-size: var(--font-size);
+    font-family: var(--font);
     position: relative;
     width: 90%;
     height: 80%;
@@ -35,9 +44,6 @@ body {
   }
 
     #result {
-      box-sizing: border-box;
-      font-size: var(--font-size);
-      font-family: var(--font); 
       font-weight: bold;
       position: absolute;
       top: 20%; 
@@ -47,9 +53,6 @@ body {
     }
 
     #text {
-      box-sizing: border-box;
-      font-size: var(--font-size);
-      font-family: var(--font); 
       position: absolute;
       top: 15%; 
       left: 50%;
@@ -58,9 +61,6 @@ body {
     }
     
     #question {
-      box-sizing: border-box;
-      font-size: var(--font-size);
-      font-family: var(--font); 
       font-weight: bold;
       position: absolute;
       left: 50%;
@@ -111,3 +111,58 @@ body {
       width: auto;
       height: auto;
     }
+
+/* Night theme */
+#theme {
+  position: absolute;
+  top: 1%;
+  right: 1%;
+}
+
+.theme-checkbox {
+  --toggle-size: 1vw;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 6.25em;
+  height: 3.125em;
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #efefef), color-stop(50%, #2a2a2a)) no-repeat;
+  background: -o-linear-gradient(left, #efefef 50%, #2a2a2a 50%) no-repeat;
+  background: linear-gradient(to right, #efefef 50%, #2a2a2a 50%) no-repeat;
+  background-size: 205%;
+  background-position: 0;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 99em;
+  position: relative;
+  cursor: pointer;
+  font-size: var(--toggle-size);
+}
+
+.theme-checkbox::before {
+  content: "";
+  width: 2.25em;
+  height: 2.25em;
+  position: absolute;
+  top: 0.438em;
+  left: 0.438em;
+  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #efefef), color-stop(50%, #2a2a2a)) no-repeat;
+  background: -o-linear-gradient(left, #efefef 50%, #2a2a2a 50%) no-repeat;
+  background: linear-gradient(to right, #efefef 50%, #2a2a2a 50%) no-repeat;
+  background-size: 205%;
+  background-position: 100%;
+  border-radius: 50%;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.theme-checkbox:checked::before {
+  left: calc(100% - 2.25em - 0.438em);
+  background-position: 0;
+}
+
+.theme-checkbox:checked {
+  background-position: 100%;
+}
